moved LocaleUtil, LongConversionUtil, MessageDigestUtil.
git-svn-id: https://www.seasar.org/svn/sandbox/s2util/trunk@54 03a6405a-cd80-4c0c-ae08-6356e5c5245e